# postgres-demo

./: .gitignore  Cargo.toml  Readme.md  docker-compose.yml
src/: main.rs
