[package]
name = "postgres-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
# tokio-postgres = "0.7.10"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres"] }
tracing = "0.1.40"
